<resources>
    <string name="app_name">StuddiBuddi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">StuddiBuddi</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">HOME</string>
    <string name="menu_pref">SETTINGS</string>
    <string name="menu_notes">NOTES EXTRACTION</string>
    <string name="menu_manage">MY SESSIONS</string>


    //user-profile
    <string name="your_name">Your name here</string>
    <string name="text_name">Account Name:</string>
    <string name="your_email">Your email here</string>
    <string name="text_email">Email:</string>
    <string name="your_number">Your phone number here</string>
    <string name="text_number">Phone Number:</string>
    <string name="profile_photo"> Profile photo:</string>
    <string name="gender">Gender:</string>
    <string name="female_option">Female</string>
    <string name="male_option">Male</string>
    <string name="text_class_year">Courses Enrolled:</string>
    <string name="courses">e.g. CMPT362, CMPT300, etc.</string>
    <string name="text_major">Major:</string>
    <string name="major">Your Major</string>
    <string name="select_profile_image">Select profile image</string>
    <string name="profile">PROFILE</string>

    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="change_button">Change</string>

    //pin-activity
    <string name="session_id">Session ID</string>
    <string name="session_id_hint">Enter your session ID here</string>
    <string name="session_name">Session Name</string>
    <string name="session_name_hint">Your session name here</string>
    <string name="session_location">Location</string>
    <string name="session_course">Course ID</string>
    <string name="session_start_time">Start Time</string>
    <string name="session_end_time">End Time</string>
    <string name="session_course_hint">Your course ID here</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="give_a_name">Give your session a name</string>
    <string name="location_selected">Location selected</string>
    <string name="delete_button">Delete</string>
    <string name="delete_successfully">Session deleted successfully</string>
    <string name="delete_unsuccessfully">Failed to delete session</string>
    <string name="marker_not_found">Marker not found</string>
    <string name="pick_location">Pick Location</string>
    <string name="no_location_selected">No location selected</string>

    <string name="google_maps_api_key">AIzaSyDvBFjEZuab7iyeSeb20xSf7iAFI5jkpfQ</string>
    <string name="map_picker_save">Save</string>
    <string name="map_picker_cancel">Cancel</string>
    <string name="map_picker_button">Choose Location on Map</string>
    <string name="description">Description</string>
    <string name="session_description_hint">About your study session</string>
    <string name="location_">Location: </string>
    <string name="pick_a_location">Please pick a location</string>

    //log in, register, log out
    <string name="log_in_button">Log in</string>
    <string name="log_out_button">Log out</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="password">Password:</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="email">Email:</string>
    <string name="register">Register</string>
    <string name="entry_cant_be_empty">Entry cannot be empty</string>
    <string name="email_domain_must_be_sfu">Email domain must be SFU</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="log_in_register">LOG IN &amp; REGISTER</string>

    //preference
    <string name="language_array_title">Language Preference</string>
    <string name="theme_array_title">Theme Preference</string>

    //session list
    <string name="session_list_name">Session Name</string>
    <string name="session_description">Session Description</string>
    <string name="session_list">Session List</string>

    //map filter
    <string name="start_time">Start Time:</string>
    <string name="choose_time">Choose Time</string>
    <string name="end_time">End Time:</string>
    <string name="public_text">Public</string>
    <string name="filter">Filter</string>
    <string name="public_sessions">Public Sessions</string>
    <string name="select_location">Select Location:</string>
    <string name="select_time_range">Select Time Range:</string>
    <string name="location_range">Location Range in KM:</string>
    <string name="name_contains">Name Contains:</string>
    <string name="location_range_in_km">Location Range in KM</string>
    <string name="reset">Reset</string>
    <string name="close">Close</string>

    //toast messages
    <string name="toast_verification_link_sent">Verification link sent to </string>
    <string name="toast_failed_verification_email">Failed to send verification email, try again</string>
    <string name="toast_user_exists">User with this email already exists</string>
    <string name="toast_weak_password">Password is too weak</string>
    <string name="toast_invalid_email_format">Invalid email format</string>
    <string name="toast_please_verify_email">Please verify your email.</string>
    <string name="toast_authentication_failed">Authentication failed</string>
    <string name="toast_login_required">Login required</string>
    <string name="toast_create_session_success">Create Session Successfully</string>
    <string name="toast_create_session_error">Create Session Error: </string>
    <string name="toast_update_profile_success">Update Profile Successfully</string>
    <string name="toast_update_profile_error">Update Profile Error</string>

    //ocr
    <string name="select_an_image_from_gallery">Select an Image from Gallery</string>
    <string name="convert_notes_to_text">Convert Notes to Text</string>

    //join
    <string name="show_group">Show Group</string>
    <string name="users_in_group">Users in Group</string>
    <string name="no_users_in_the_group">No users in the group</string>
    <string name="leave">Leave</string>
    <string name="successfully_left_group">Successfully left group</string>
    <string name="join">Join</string>
    <string name="successfully_joined_group">Successfully joined group</string>
    <string name="ok">OK</string>

    <string name="start_time_cannot_be_later_than_end_time">Start time cannot be later than end time</string>
    <string name="end_time_cannot_be_earlier_than_start_time">End time cannot be earlier than start time</string>

    //my session list
    <string name="show_only_owned">Show only owned</string>
    <string name="title_activity_my_session">MySessionActivity</string>
    <string name="type_a_message">Type a message</string>
    <string name="send">Send</string>
    <string name="pick_image">Pick Image</string>
    <string name="session_name_2">Session Name</string>
    <string name="location_number">Location</string>
    <string name="course_number">Course Number</string>
    <string name="description_2">Description</string>
    <string name="group_members">Group Members</string>
    <string name="leave_session">Leave Session</string>
    <string name="chat">Chat</string>
    <string name="session_error">Session Error</string>
    <string name="session_information">SESSION INFORMATION</string>
    <string name="delete_session">Delete Session</string>
    <string name="please_check_your_internet_connection">Please check your internet connection</string>
    <string name="saving_session_error">Saving Session Error</string>
    <string name="save_profile_error">Save profile error</string>
    <string name="location_permission_not_granted">Location Permission Not Granted</string>
</resources>