<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_t3"
            android:icon="@drawable/car_ui_icon_edit"
            android:title="@string/menu_manage" />

        <item
            android:id="@+id/nav_t2"
            android:icon="@drawable/ic_menu_notes"
            android:title="@string/menu_notes" />

        <item
            android:id="@+id/nav_t1"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_pref" />
    </group>
</menu>