<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_photo"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/profile_photo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="25dp"
                    android:contentDescription="@string/profile_photo"
                    android:src="@drawable/default_pfp" />

                <Button
                    android:id="@+id/change_button"
                    android:paddingLeft= "8dp"
                    android:paddingRight= "8dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="6"
                    android:layout_marginStart="50dp"
                    android:text="@string/change_button"
                    android:textAllCaps="true" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_name"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/your_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="text"
                android:hint="@string/your_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_email"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/your_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:inputType="textEmailAddress"
                android:hint="@string/your_email" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_number"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/your_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:inputType="number"
                android:hint="@string/your_number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="15sp" />

            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/female_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/female_option"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/male_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/male_option"
                    android:textSize="15sp" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_class_year"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/courses"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:inputType="textCapCharacters"
                android:hint="@string/courses" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_major"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/major"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:inputType="text"
                android:hint="@string/major" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/save_button"
                    android:paddingLeft= "8dp"
                    android:paddingRight= "8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:text="@string/save_button"
                    android:textAllCaps="true"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/cancel_button"
                    android:paddingLeft= "8dp"
                    android:paddingRight= "8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:text="@string/cancel_button"
                    android:textAllCaps="true"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>