<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/session_photo"
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    android:layout_marginEnd="25dp"
                    android:contentDescription="@string/profile_photo"
                    android:src="@drawable/beloved_god" />

                <Button
                    android:id="@+id/pick_button"
                    android:paddingLeft= "8dp"
                    android:paddingRight= "8dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="6"
                    android:layout_marginStart="50dp"
                    android:text="@string/pick_image"
                    android:textAllCaps="true" />
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/session_name"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/session_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:inputType="text"
                android:hint="@string/session_name_hint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/session_location"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/location_spinner"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:layout_width="match_parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/session_course"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/session_course"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:inputType="text"
                android:hint="@string/session_course_hint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="15sp" />
            <EditText
                android:id="@+id/session_description_entry"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="text"
                android:hint="@string/session_description_hint" />

            <TextView
                android:id="@+id/start_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_time"
                android:padding="10dp"
                android:textSize="15sp" />

            <Button
                android:id="@+id/start_time_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_time"
                android:layout_gravity="left"/>

            <TextView
                android:id="@+id/end_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_time"
                android:padding="10dp"
                android:textSize="15sp" />

            <Button
                android:id="@+id/end_time_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_time"
                android:layout_gravity="left"/>

            <CheckBox
                android:id="@+id/check_box_public"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/public_text"
                android:layout_gravity="left"/>

            <Button
                android:id="@+id/map_picker_button"
                android:paddingLeft= "8dp"
                android:paddingRight= "8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/map_picker_button"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/save_session_button"
                    android:paddingLeft= "8dp"
                    android:paddingRight= "8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:text="@string/save_button"
                    android:textAllCaps="true"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/cancel_session_button"
                    android:paddingLeft= "8dp"
                    android:paddingRight= "8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:text="@string/cancel_button"
                    android:textAllCaps="true"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>