<?xml version="1.0" encoding="utf-8"?>
<!-- dialog_filter.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Checkbox for Public Sessions -->
    <CheckBox
        android:id="@+id/checkBoxPublic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/public_sessions"/>

    <!-- Spinner for Location -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_location"/>

    <Spinner
        android:id="@+id/spinnerLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/filter_location_list" />

    <!-- Location Range -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_range" />

    <EditText
        android:id="@+id/editTextLocationRange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location_range_in_km"
        android:inputType="numberDecimal"/>

    <!-- Name Contains -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_contains"/>

    <EditText
        android:id="@+id/editTextNameContains"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>

</LinearLayout>
